--- a/.github/workflows/master-deploy.yaml
+++ b/.github/workflows/master-deploy.yaml
@@ -35,7 +35,9 @@ jobs:
           key: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
           script: |
             cd dockers/
-            sudo docker compose up -d --build --pull app
+            sudo docker compose down
+            sudo docker image  rm  kenanaljaber/aikiryu-back -f
+            sudo docker compose up -d
 
 
 
